--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="utf-8">
 	<title>Vasiliy Suhovenko</title>
 	<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<header>
-		<h1>CV</h1>
-	</header>
 	<main>
+		<img src="img/photo.JPG" alt="candidate's photo">
 		<h2>Vasiliy Suhovenko</h2>
-		<img src="img/photo.JPG" alt="candidate's photo" width="150">
+		<p>Junior front-end developer</p>
 		<h2>Contacts</h2>
 		<ul>
 			<li>Phone: +375 29 610 24 38
@@ -65,9 +61,5 @@
 		<h2>English</h2>
 		<p>A2. I have experience communicating with a native speaker (USA) via Italki.com.</p>
 	</main>
-	<footer>
-
-	</footer>
 </body>
-
 </html>
