refactor: changed format

--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
 		</ul>
 		<h2>Code examples</h2>
 		<pre>
+			<code>
       function shuffle(array) {
           let shuffleArray = [];
           let max = array.length - 1;
           let min = 0;
         
-          for (let i = 0; i < array.length; i++) {
+          for (let i = 0; i &lt; array.length; i++) {
               let j = 0;
               do {
                   j = Math.round(min - 0.5 + Math.random() * (max - min + 0.5));
@@ -46,7 +47,8 @@
           }
             
           return shuffleArray;
-      }
+			}
+		</code>
 		</pre>
 		<h2>Experience</h2>
 		<p>I have little experience as a front-end developer. But everything is ahead.</p>
