refactor: change styles and html structure

--- a/index.html
+++ b/index.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<title>Vasiliy Suhovenko</title>
+	<script src="https://use.fontawesome.com/2e1e863fab.js"></script>
 	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 	<main>
 		<img src="img/photo.JPG" alt="candidate's photo">
 		<h2>Vasiliy Suhovenko</h2>
 		<p>Junior front-end developer</p>
 		<h2>Contacts</h2>
-		<ul>
-			<li>Phone: +375 29 610 24 38
-			<li>Telegram: svd_bel
-			<li>Skype: vasiliy_suhovenko
-			<li>Linkedin: <a href="https://www.linkedin.com/in/vasiliy-suhovenko-067667142/" target="_blank">Vasiliy
+		<ul class="contacts">
+			<li>
+				<i class="fa fa-phone-square phone fa-2x" aria-hidden="true"></i>
+				<a href="tel:+375296102438">+375 (29) 610-24-38</a>
+			</li>
+			<li>
+				<i class="fa fa-telegram telegram fa-2x" aria-hidden="true"></i>
+				<a href="https://t.me/svd_bel" target="_blank">svd_bel</a>
+			</li>
+			<li>
+				<i class="fa fa-linkedin-square linkedin fa-2x" aria-hidden="true"></i>
+				<a href="https://www.linkedin.com/in/vasiliy-suhovenko-067667142/" target="_blank">Vasiliy
 					Suhovenko</a>
+			</li>
+			<li>
+				<i class="fa fa-skype skype fa-2x" aria-hidden="true"></i>
+				<a href="skype:vasiliy_suhovenko">vasiliy_suhovenko</a>
+			</li>
+
+
 		</ul>
 		<h2>Summary</h2>
 		<p>I want to become a front-end developer, because javaScript drives me crazy, <br>and perfectly smooth and
@@ -27,11 +44,14 @@
 			<li>CSS
 			<li>JavaScript
 			<li>SQL
+			<li>Git
+			<li>Sass
+			<li>BEM
 			<li>Visual Basic Script
 		</ul>
 		<h2>Code examples</h2>
-		<pre>
-			<code>
+		<code>
+			<pre>
       function shuffle(array) {
           let shuffleArray = [];
           let max = array.length - 1;
@@ -47,9 +67,9 @@
           }
             
           return shuffleArray;
-			}
-		</code>
+	}
 		</pre>
+			</code>
 		<h2>Experience</h2>
 		<p>I have little experience as a front-end developer. But everything is ahead.</p>
 		<h2>Education</h2>
@@ -64,4 +84,5 @@
 		<p>A2. I have experience communicating with a native speaker (USA) via Italki.com.</p>
 	</main>
 </body>
+
 </html>
